# wasmedge_wasi_nn

./: .gitignore  Cargo.toml  README.md
src/: generated.rs
